# mermaid-py

./: .gitignore  README.md  pyproject.toml  setup.py
mermaid_py/: client.py  exceptions.py  utilities.py
mermaid_py/tests/: test_client.py
src/: checker.py  client.py  utilities.py
tests/: test_client.py
